// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deleteUIConversionEvent 1`] = `
Object {
  "Key": Object {
    "eventKey": Object {
      "S": "type|0x0",
    },
    "transactionHash": Object {
      "S": "txHash",
    },
  },
  "TableName": "uiEvents_dev",
}
`;

exports[`getLastPriceFromStatus 1`] = `
Object {
  "bitfinex": Object {
    "address": "0x0",
    "price": 617.38,
    "timestamp": 1528081780000,
  },
  "gdax": Object {
    "address": "0x0",
    "price": 616.14,
    "timestamp": 1528081164613,
  },
  "gemini": Object {
    "address": "0x0",
    "price": 617.67,
    "timestamp": 1528081767414,
  },
  "kraken": Object {
    "address": "0x0",
    "price": 617.85,
    "timestamp": 1528081700549,
  },
}
`;

exports[`insertUIConversion 1`] = `
Object {
  "Item": Object {
    "duoFee": Object {
      "N": "0",
    },
    "eth": Object {
      "N": "123",
    },
    "ethFee": Object {
      "N": "0.123",
    },
    "eventKey": Object {
      "S": "Create|0x0",
    },
    "systime": Object {
      "N": "1234567890",
    },
    "tokenA": Object {
      "N": "456",
    },
    "tokenB": Object {
      "N": "456",
    },
    "transactionHash": Object {
      "S": "0x123",
    },
  },
  "TableName": "uiEvents_dev",
}
`;

exports[`insertUIConversion 2`] = `
Object {
  "Item": Object {
    "duoFee": Object {
      "N": "0.123",
    },
    "eth": Object {
      "N": "123",
    },
    "ethFee": Object {
      "N": "0",
    },
    "eventKey": Object {
      "S": "Redeem|0x0",
    },
    "systime": Object {
      "N": "1234567890",
    },
    "tokenA": Object {
      "N": "456",
    },
    "tokenB": Object {
      "N": "456",
    },
    "transactionHash": Object {
      "S": "0x123",
    },
  },
  "TableName": "uiEvents_dev",
}
`;

exports[`parseAcceptedPrices 1`] = `
Array [
  Object {
    "blockNumber": 7601869,
    "navA": 1.000001,
    "navB": 0.949601708438353,
    "price": 389.9205416876706,
    "timestamp": 1528343400000,
    "transactionHash": "0xe812d2ee1082ffb061de4d35c2502619deb2c6eaebf46a0e6db4b565637c50e0",
  },
  Object {
    "blockNumber": 7601915,
    "navA": 1.000003,
    "navB": 0.938672570476648,
    "price": 387.7351140953296,
    "timestamp": 1528344000000,
    "transactionHash": "0xccce0d1576ae3f457874f26723423d53ae16445337fd517c4c728c51b824a94a",
  },
  Object {
    "blockNumber": 7601935,
    "navA": 1.000004,
    "navB": 0.999996,
    "price": 400,
    "timestamp": 1528344300000,
    "transactionHash": "0x34c9453da01ec0ab7f8825139098818fe6c513978a374b96fa144e283479be8a",
  },
  Object {
    "blockNumber": 7601956,
    "navA": 1.000005,
    "navB": 1.0362576435131814,
    "price": 407.2525287026363,
    "timestamp": 1528344600000,
    "transactionHash": "0x7c1f78550d25cc5778d89259f79f36c784817b71f0927149cd84401c048c127a",
  },
  Object {
    "blockNumber": 7601998,
    "navA": 1.000007,
    "navB": 0.8646313948688895,
    "price": 372.9276789737779,
    "timestamp": 1528345200000,
    "transactionHash": "0x013ef5ff185b02e542e7a8c09e6fc58f4f1c8a4f9a24aceb7cad055ac57deda4",
  },
  Object {
    "blockNumber": 7602043,
    "navA": 1.000009,
    "navB": 0.4784446453151695,
    "price": 295.6907290630339,
    "timestamp": 1528345800000,
    "transactionHash": "0xaed8a268e55ccf2595f95f3ea2d00e646e0284e48ad759dc3317ae8b1d0e3b3e",
  },
  Object {
    "blockNumber": 7602063,
    "navA": 1.00001,
    "navB": 0.4819307128520117,
    "price": 296.38814257040235,
    "timestamp": 1528346101000,
    "transactionHash": "0xe04125ebf7bb79cf218e210faa78c056b45707cc0154aa832ce6abca694f5e69",
  },
  Object {
    "blockNumber": 7602106,
    "navA": 1.000012,
    "navB": 1.606986604155561,
    "price": 521.3997208311122,
    "timestamp": 1528346700000,
    "transactionHash": "0x313f0e11df309085907e0a4f0f29e829609f9a1f751fbb5d6255f12bbe33aa67",
  },
  Object {
    "blockNumber": 7602152,
    "navA": 1.000002,
    "navB": 1.105578230324389,
    "price": 548.9244721393227,
    "timestamp": 1528347300000,
    "transactionHash": "0xaec53bf77f6f86a4461d194e0de8bc5383903659c5d72d04761b0faf92310bf6",
  },
  Object {
    "blockNumber": 7602197,
    "navA": 1.000004,
    "navB": 1.8448075656164837,
    "price": 741.6419780647769,
    "timestamp": 1528347900000,
    "transactionHash": "0xbe9d7aa7d4cbc4d97f8b195be4bd49d35801838810d426a40269fedd73f64eeb",
  },
  Object {
    "blockNumber": 7602243,
    "navA": 1.000002,
    "navB": 0.29116715065849263,
    "price": 478.7926214552912,
    "timestamp": 1528348500000,
    "transactionHash": "0x8cf6f44ea14f7b9f607f537350d9b9a14eddbb5870374fb092ab4ceac77286be",
  },
  Object {
    "blockNumber": 7602292,
    "navA": 1.000004,
    "navB": 0.3899275715869432,
    "price": 515.4158000632123,
    "timestamp": 1528349100000,
    "transactionHash": "0xa0f9df566449bae13f3a6352c44bb997cb5a39b915b53c2444afead01242b0ab",
  },
  Object {
    "blockNumber": 7602337,
    "navA": 1.000006,
    "navB": 0.38844475186617855,
    "price": 514.8666810297797,
    "timestamp": 1528349700000,
    "transactionHash": "0xcc22ca3c12077a5b83a55028c993186b6b78b23434d318653e0a63894eb64bf9",
  },
]
`;

exports[`parseConversion 1`] = `
Array [
  Object {
    "blockNumber": 7715602,
    "duoFee": 0.8,
    "eth": 0.1,
    "ethFee": 0,
    "timestamp": 1529559912000,
    "tokenA": 26.160725,
    "tokenB": 26.160725,
    "transactionHash": "0x7283db82115b77c3fa055ec1553acf7c16d3ba1e2db5b2cea1974ba32bad29dc",
    "type": "Create",
  },
]
`;

exports[`parseHourly 1`] = `
Array [
  Object {
    "close": 622.68,
    "date": "2018-06-04",
    "high": 625.04,
    "hour": "00",
    "low": 619.39,
    "minute": 0,
    "open": 619.39,
    "source": "BITFINEX",
    "timestamp": 1528070400000,
    "volume": 9626.950549620002,
  },
]
`;

exports[`parseMinutely 1`] = `
Array [
  Object {
    "close": 582.89,
    "date": "2018-06-01",
    "high": 582.89,
    "hour": "07",
    "low": 582.88,
    "minute": 53,
    "open": 582.88,
    "source": "GDAX",
    "timestamp": 1527839580000,
    "volume": 12.117600000000001,
  },
]
`;

exports[`parseStatus 1`] = `
Array [
  Object {
    "process": "CHAIN_AWS_PUBLIC",
    "timestamp": 1527846160749,
  },
  Object {
    "process": "EVENT_AWS_PRIVATE_STARTPRERESET",
    "timestamp": 1527751553589,
  },
  Object {
    "process": "EVENT_AWS_PRIVATE_STARTRESET",
    "timestamp": 1527751833800,
  },
  Object {
    "process": "EVENT_AZURE_PRIVATE_STARTPRERESET",
    "timestamp": 1527752331975,
  },
  Object {
    "process": "EVENT_AZURE_PRIVATE_STARTRESET",
    "timestamp": 1527751947443,
  },
  Object {
    "process": "EVENT_GCP_PRIVATE_STARTPRERESET",
    "timestamp": 1527752140470,
  },
  Object {
    "process": "EVENT_GCP_PRIVATE_STARTRESET",
    "timestamp": 1527752036379,
  },
  Object {
    "process": "FEED_AWS_PRIVATE",
    "timestamp": 1527851700049,
  },
  Object {
    "process": "FEED_AZURE_PRIVATE",
    "timestamp": 1527758100003,
  },
  Object {
    "process": "FEED_GCP_PRIVATE",
    "timestamp": 1527757500018,
  },
  Object {
    "process": "HOURLY_AWS_PUBLIC",
    "timestamp": 1528081753755,
  },
  Object {
    "process": "MINUTELY_AWS_PUBLIC",
    "timestamp": 1528081764433,
  },
  Object {
    "price": 573.84,
    "process": "PRICE_AWS_PRIVATE_BITFINEX",
    "timestamp": 1527831872000,
    "volume": 2,
  },
  Object {
    "price": 568.74,
    "process": "PRICE_AWS_PRIVATE_GDAX",
    "timestamp": 1527756997255,
    "volume": 0.112,
  },
  Object {
    "price": 568.9,
    "process": "PRICE_AWS_PRIVATE_GEMINI",
    "timestamp": 1527757021801,
    "volume": 0.034274,
  },
  Object {
    "price": 567.99,
    "process": "PRICE_AWS_PRIVATE_KRAKEN",
    "timestamp": 1527756882730,
    "volume": 1.3,
  },
  Object {
    "price": 617.38,
    "process": "PRICE_AWS_PUBLIC_BITFINEX",
    "timestamp": 1528081780000,
    "volume": 1.608,
  },
  Object {
    "price": 616.14,
    "process": "PRICE_AWS_PUBLIC_GDAX",
    "timestamp": 1528081164613,
    "volume": 6.52551355,
  },
  Object {
    "price": 617.67,
    "process": "PRICE_AWS_PUBLIC_GEMINI",
    "timestamp": 1528081767414,
    "volume": 0.021854,
  },
  Object {
    "price": 617.85,
    "process": "PRICE_AWS_PUBLIC_KRAKEN",
    "timestamp": 1528081700549,
    "volume": 1.13,
  },
  Object {
    "price": 569.89,
    "process": "PRICE_AZURE_PRIVATE_BITFINEX",
    "timestamp": 1527757209000,
    "volume": 0.02548273,
  },
  Object {
    "price": 569.09,
    "process": "PRICE_AZURE_PRIVATE_GDAX",
    "timestamp": 1527757217889,
    "volume": 0.69683,
  },
  Object {
    "price": 569.01,
    "process": "PRICE_AZURE_PRIVATE_GEMINI",
    "timestamp": 1527757197779,
    "volume": 0.714947,
  },
  Object {
    "price": 569.3,
    "process": "PRICE_AZURE_PRIVATE_KRAKEN",
    "timestamp": 1527757210567,
    "volume": 0.29453729,
  },
  Object {
    "price": 575.97,
    "process": "PRICE_GCP_PRIVATE_BITFINEX",
    "timestamp": 1527766704000,
    "volume": 5.16121098,
  },
  Object {
    "price": 575,
    "process": "PRICE_GCP_PRIVATE_GDAX",
    "timestamp": 1527766704262,
    "volume": 0.7576,
  },
  Object {
    "price": 575.41,
    "process": "PRICE_GCP_PRIVATE_GEMINI",
    "timestamp": 1527766669797,
    "volume": 0.005219,
  },
  Object {
    "price": 575.04,
    "process": "PRICE_GCP_PRIVATE_KRAKEN",
    "timestamp": 1527766688094,
    "volume": 0.2,
  },
]
`;

exports[`parseTotalSupply 1`] = `
Array [
  Object {
    "blockNumber": 7650502,
    "timestamp": 1528862200000,
    "tokenA": 0,
    "tokenB": 0,
    "transactionHash": "0xd7c9bf35f925a8353032cfe1178439617997d6e27484465d393de3d38f8331ab",
  },
  Object {
    "blockNumber": 7651095,
    "timestamp": 1528867600000,
    "tokenA": 0,
    "tokenB": 0,
    "transactionHash": "0xe35137d392e20dd2025cd996de73a271ebcea23128a89f7f423b326ce20893e5",
  },
]
`;

exports[`parseUIConversion 1`] = `
Array [
  Object {
    "blockNumber": 0,
    "duoFee": 0,
    "eth": 0.21704519241528358,
    "ethFee": 0.0021704519241528357,
    "timestamp": 1529317121530,
    "tokenA": 36.9599025612444,
    "tokenB": 36.9599025612444,
    "transactionHash": "0x8e59dff2458a76b2ba0a9e11413e603cddc227d663a8bf7b45e0241f3896424d",
    "type": "Create",
  },
]
`;

exports[`parseUIConversion 2`] = `
Array [
  Object {
    "blockNumber": 0,
    "duoFee": 2.0051663085602844,
    "eth": 0.20051663085602844,
    "ethFee": 0,
    "timestamp": 1529317783500,
    "tokenA": 34.14530889109876,
    "tokenB": 34.14530889109876,
    "transactionHash": "0x94ea38c42188eaacfa75ad0a091866b46f4c75993d33c94c8cc22822433ca244",
    "type": "Redeem",
  },
]
`;

exports[`queryAcceptPriceEvent 1`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "AcceptPrice|date1",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "events_dev",
}
`;

exports[`queryAcceptPriceEvent 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "AcceptPrice|date2",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "events_dev",
}
`;

exports[`queryConversionEvent 1`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "Create|date1|0x0",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "events_dev",
}
`;

exports[`queryConversionEvent 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "Redeem|date1|0x0",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "events_dev",
}
`;

exports[`queryConversionEvent 3`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "Create|date2|0x0",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "events_dev",
}
`;

exports[`queryConversionEvent 4`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "Redeem|date2|0x0",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "events_dev",
}
`;

exports[`queryHourlyOHLC 1`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":sourceDate": Object {
      "S": "src|date1",
    },
  },
  "KeyConditionExpression": "sourceDate = :sourceDate",
  "TableName": "hourly_dev",
}
`;

exports[`queryHourlyOHLC 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":sourceDate": Object {
      "S": "src|date2",
    },
  },
  "KeyConditionExpression": "sourceDate = :sourceDate",
  "TableName": "hourly_dev",
}
`;

exports[`queryMinutelyOHLC 1`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":sourceDateHour": Object {
      "S": "src|date1",
    },
  },
  "KeyConditionExpression": "sourceDateHour = :sourceDateHour",
  "TableName": "minutely_dev",
}
`;

exports[`queryMinutelyOHLC 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":sourceDateHour": Object {
      "S": "src|date2",
    },
  },
  "KeyConditionExpression": "sourceDateHour = :sourceDateHour",
  "TableName": "minutely_dev",
}
`;

exports[`queryTotalSupplyEvent 1`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "TotalSupply|date1",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "events_dev",
}
`;

exports[`queryTotalSupplyEvent 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "TotalSupply|date2",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "events_dev",
}
`;

exports[`queryUIConversionEvent 1`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "Create|0x0",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "uiEvents_dev",
}
`;

exports[`queryUIConversionEvent 2`] = `
Object {
  "ExpressionAttributeValues": Object {
    ":eventKey": Object {
      "S": "Redeem|0x0",
    },
  },
  "KeyConditionExpression": "eventKey = :eventKey",
  "TableName": "uiEvents_dev",
}
`;

exports[`scanStatus 1`] = `
Object {
  "TableName": "status_dev",
}
`;
